--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
     background-color: var(--black);
     font-family: 'Times New Roman', Times, serif;
+    color: white;
 }
 
 header .logo {
@@ -36,4 +37,26 @@ header nav a {
 
 header nav a:hover {
     color: #fff;
+}
+
+/* main film */
+.main-film {
+    font-size: 1.5rem;
+    background-image: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('https://wallpaperaccess.com/full/6664894.jpg');
+
+    height: 400px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.title {
+    font-size: 2.5rem;
+}
+
+.description {
+    margin-bottom: 1rem;
 }
