--- a/style.css
+++ b/style.css
@@ -53,10 +53,36 @@ header nav a:hover {
     align-items: flex-start;
 }
 
-.title {
-    font-size: 2.5rem;
+.main-film .title {
+    font-size: 3rem;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 5px;
 }
 
-.description {
+.main-film .description {
     margin-bottom: 1rem;
+    margin-top: 1rem;
+    
+}
+
+.main-film .btn {
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: .80rem;
+
+    cursor: pointer;
+    transition: all .3s ease;
+}
+
+.main-film .btn:hover {
+    background-color: white;
+    color: var(--black);
+}
+
+.main-film .btn i {
+    margin-right: 8px;
 }
