--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ header nav a:hover {
     color: #fff;
 }
 
+.container, .btns {
+    margin: 0 2rem;
+}
+
 /* main film */
 .main-film {
     font-size: 1.5rem;
@@ -85,4 +89,8 @@ header nav a:hover {
 
 .main-film .btn i {
     margin-right: 8px;
+}
+
+.main-film .container {
+    width: 60%;
 }
