--- a/style.css
+++ b/style.css
@@ -1,151 +1,151 @@
 :root {
-    --red: #e50914;
-    --black: #141414;
+  --red: #e50914;
+  --black: #141414;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: var(--black);
-    font-family: 'Times New Roman', Times, serif;
-    color: white;
+  background-color: var(--black);
+  font-family: "Times New Roman", Times, serif;
+  color: white;
 }
 
 header .logo {
-    margin-left: 5px;
-    color: var(--red);
-    font-family: 'Arial black', Times;
-    font-size: 3rem;
+  margin-left: 5px;
+  color: var(--red);
+  font-family: "Arial black", Times;
+  font-size: 3rem;
 }
 
 header .container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header nav a {
-    text-decoration: none;
-    color: #aaa;
-    margin-right: 10px;
+  text-decoration: none;
+  color: #aaa;
+  margin-right: 10px;
 }
 
 header nav a:hover {
-    color: #fff;
+  color: #fff;
 }
 
-.container, .btns {
-    margin: 0 2rem;
+.container,
+.btns {
+  margin: 0 2rem;
 }
 
 /* main film */
 .main-film {
-    font-size: 1.5rem;
-    background-image: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('https://wallpaperaccess.com/full/6664894.jpg');
+  font-size: 1.5rem;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%),
+    url("https://wallpaperaccess.com/full/6664894.jpg");
 
-    height: 400px;
-    background-size: cover;
+  height: 400px;
+  background-size: cover;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .main-film .title {
-    font-size: 3rem;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    letter-spacing: 5px;
+  font-size: 3rem;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  letter-spacing: 5px;
 }
 
 .main-film .description {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .main-film .btn {
-    background-color: rgba(0,0,0,.50);
-    border: none;
-    color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
 
-    padding: 15px 30px;
-    margin-right: 15px;
-    font-size: .80rem;
+  padding: 15px 30px;
+  margin-right: 15px;
+  font-size: 0.8rem;
 
-    cursor: pointer;
-    transition: all .3s ease;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .main-film .btn:hover {
-    background-color: white;
-    color: var(--black);
+  background-color: white;
+  color: var(--black);
 }
 
 .main-film .btn i {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
-/* .main-film .container {
-    width: 60%;
-} */
 .description {
-    width: 60%;
+  width: 60%;
 }
 
 /* carousel */
-/* .main-carousel {
-    margin: 0 1rem;
-} */
+.box img {
+  transition: all 0.3s ease;
+}
+
+.box img:hover {
+  opacity: 0.5;
+}
 
 .box {
-    width: 270px;
-    height: 400px;
-    margin: 0 0 0 .70rem;
-    /* box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.10); */
+  width: 270px;
+  height: 400px;
+  margin: 0 0 0 0.7rem;
 }
 
 .box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .flickity-page-dots .dot.is-selected {
-    background: rgba(255, 255, 255, 0.733);
+  background: rgba(255, 255, 255, 0.733);
 }
 
 /* Mobile friendly */
-@media screen and (max-width: 700px){
-    header .container {
-        display: flex;
-        flex-direction: column;
-    }
-    nav {
-        margin-bottom: 1rem;
-    }
-    .description {
-        width: 90%;
-    }
-    .main-carousel {
-        margin-top: 1rem;
-    }
+@media screen and (max-width: 700px) {
+  header .container {
+    display: flex;
+    flex-direction: column;
+  }
+  nav {
+    margin-bottom: 1rem;
+  }
+  .description {
+    width: 90%;
+  }
+  .main-carousel {
+    margin-top: 1rem;
+  }
 }
 
-@media screen and (max-width: 440px){
-    .btns {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-    .btn {
-        width: 200px;
-    }
+@media screen and (max-width: 440px) {
+  .btns {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .btn {
+    width: 200px;
+  }
 }
-
